fix: open form action in iframe to prevent rendering blank page after 204 on iOS
See https://bugs.webkit.org/show_bug.cgi?id=60206

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -127,3 +127,10 @@ figure {
 		padding: 0;
 	}
 }
+
+.iframe-hidden {
+	display: block;
+	width: 0;
+	height: 0;
+	margin: 0;
+}
